--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 					float:left;
 					padding:0px;	
 					cursor:pointer;
-					background-image:url('../images/img1.png');
+					background-image:url('http://cdn.desktopwallpapers4.me/media/thumbs_400x250/2/17768.jpg');
 					background-position:center;}
 					.caption{
 						filter:inherit;
